...
                android:textColor="@color/bookItem_price"
                android:text="@string/lorem_ipsum"
                style="@style/TxtBookCardView"
                android:layout_centerVertical="true"
                android:singleLine="true"/>
            <ImageView
                android:id="@+id/bookItem_delete"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="4dp"
                android:layout_centerVertical="true"
                android:src="@drawable/delete"
                android:layout_alignParentEnd="true"
...
